# gpu-monitor

./: .gitignore  Cargo.toml  README.md  gpu-monitor  install.sh  pyproject.toml
.agents/skills/: SKILL.md
.github/workflows/: test.yml
app/: index.html  package-lock.json  package.json
app/public/: gpumon-config.js
app/src/: App.tsx  index.css  main.tsx
app/src/components/: FanIndicator.tsx  GPUCard.tsx  GPUDetail.tsx  GPUOverview.tsx  GPUTelemetry.tsx  Header.tsx  PowerRing.tsx  ProcessTable.tsx  ResourceChart.tsx  StatusBar.tsx  TemperatureBar.tsx  UtilizationChart.tsx
app/src/store/: gpuStore.ts
app/src/types/: index.ts
docs/: cli.md  design.md  workflows.md
scripts/: bootstrap  gpumon
src/: main.rs
src/gpumon/: __init__.py  __main__.py  gpu_collector.py  tui.py  ws_server.py
tests/: test_cli.py  test_gpu_collector.py
