[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gpu-monitor"
version = "0.1.0"
description = "NVIDIA GPU monitor with a terminal interface and a web dashboard."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "GPU Monitor contributors" }]
dependencies = [
  "blessed>=1.20",
  "nvidia-ml-py>=12.560",
  "websockets>=12",
]

[project.scripts]
gpumon = "gpumon.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
